test/invalidwiki/Страница 1/__page.opt
[General]
tags = Тест, test, двойной тег
type = html
datetime = 2017-02-28 13:53:27.971896

[Section1]
param1 = абырвалг
param2 = 125

